Tests/Metalama.Framework.Tests.Integration/Tests/Aspects/InvalidCode/TemplateExpansionError.t.cs
// CompileTimeAspectPipeline.TryExecute failed. 
// Error LAMA0041 on `throw new Exception();`: `'Aspect.OverrideMethod()' threw 'Exception' when applied to 'TargetCode.Method(int)': Exception of type 'System.Exception' was thrown. Exception details are in '(none)'. To attach a debugger to the compiler, use the  '-p:MetalamaDebug=True' command-line option.`
